--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,9 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.11'
 }
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'poker.Euler'
+    }
+}
