--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,10 @@
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
 
+compileJava {
+    sourceCompatibility '1.8'
+}
+
 // In this section you declare where to find the dependencies of your project
 repositories {
     // Use 'maven central' for resolving your dependencies.
